# animem

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: BOUNDARY.md  DEPENDENCIES.md  LOCAL_DATA.md  MIGRATION_FROM_MF.md  OPEN_SOURCE_BOUNDARY.md  REDACTION_POLICY.md
examples/: extension-profile.example.json  extension-profile.example.toml  profile.example.json  profile.example.toml
examples/provenance/: README.md  candidate-evidence.synthetic.json  review-decision-event.synthetic.json  schema-artifact-manifest.synthetic.json
scripts/: check-redacted-event-payload  check-source-bundle-allowlist  redaction_policy.py  scan-sensitive.sh  test-redacted-event-payload  test-release-gates
src/: authority.rs  candidate.rs  classification.rs  document.rs  domain.rs  error.rs  extension.rs  extract.rs  ids.rs  lib.rs  main.rs  maintenance.rs  profile.rs  provenance.rs  registry.rs  schema.rs  splitter.rs  store.rs  validator.rs
tests/: cli.rs
