[package]
name = "animem"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "Open memory asset primitives for document-grounded agent memory."
repository = "https://github.com/animem/animem"
readme = "README.md"
keywords = ["memory", "agents", "documents", "retrieval"]
categories = ["data-structures", "text-processing"]
include = [
    "src/**/*",
    "tests/**/*",
    "docs/**/*",
    "examples/**/*",
    "scripts/check-source-bundle-allowlist",
    "scripts/scan-sensitive.sh",
    "scripts/test-release-gates",
    ".github/workflows/ci.yml",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
