[package]
name = "animem"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "Open memory asset primitives for document-grounded agent memory."
repository = "https://github.com/animem/animem"
readme = "README.md"
keywords = ["memory", "agents", "documents", "retrieval"]
categories = ["data-structures", "text-processing"]
include = [
    "src/**/*",
    "tests/**/*",
    "docs/**/*",
    "examples/**/*",
    "scripts/check-source-bundle-allowlist",
    "scripts/check-redacted-event-payload",
    "scripts/redaction_policy.py",
    "scripts/scan-sensitive.sh",
    "scripts/test-redacted-event-payload",
    "scripts/test-release-gates",
    ".github/workflows/ci.yml",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
# Optional: enables sqlx::Type derive for domain types.
# OFF by default — public crate stays storage-free.
# Enable only in private downstream (am-core) for PG integration.
sqlx = { version = "0.9", optional = true, default-features = false, features = ["macros"] }

[dev-dependencies]
serde_yaml = "0.9"

[features]
default = []
db = ["dep:sqlx"]
